--- a/config/params.yaml
+++ b/config/params.yaml
@@ -9,8 +9,9 @@
 gps_converter:
   ros__parameters:
     reference_llh: [-1.0, -1.0, -1.0]
-    pose_topic: "/gps_pose"
+    pose_topic: "/gps_to_local_posecov"
     gps_sub_topic: "/navsatfix"
     pose_frame: "base_link"
     reference_topic: "/gps_reference"
-    heading_topic: "/mavros/global_position/compass_hdg"
+    heading_topic: "/baseline"
+    constant_heading_offset: 30.0
