--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
+  <depend>swiftnav_ros2_driver</depend>
   
 
   <export>
