--- a/config/params.yaml
+++ b/config/params.yaml
@@ -8,7 +8,7 @@
 
 gps_converter:
   ros__parameters:
-    reference_llh: [-1.0, -1.0, -1.0]
+    reference_llh: [42.848442, -78.750918 ]
     pose_topic: "/gps_to_odom"
     gps_sub_topic: "/navsatfix"
     pose_frame: "base_link"
